<resources>
    <string name="app_name">Can App</string>
    <string name="can_app" translatable="false">Can App</string>
    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="message_login">Has Hecho Click en el Boton Login</string>
    <string name="message_register">Has hecho click en el boton Registrarse</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="nombre">Name</string>
    <string name="apellido">Surname</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <string name="message_name_empty">name can\'t be empty</string>
    <string name="message_surname_empty">surmane can\'t be empty</string>
    <string name="message_userName_empty">User Name can\'t be empty</string>
    <string name="message_email_empty">email user cam\'t be empty</string>
    <string name="message_password_empty">Password can\'t be empty</string>
    <string name="message_create">A new user has been created</string>
    <string name="noUsers">There is no User Registered</string>
    <string name="userPassMismatch">There is no user with that Password</string>
    <string name="ladrar">ladrar</string>
    <string name="parar">parar</string>

</resources>
